# py-requirements.nvim

./: .gitignore  .stylua.toml  README.md  justfile
demo/: demo.tape  pyproject.toml  record.py  requirements.txt
lua/py-requirements/: actions.lua  api.lua  cmp.lua  core.lua  curl.lua  health.lua  init.lua  lsp.lua  manager.lua  parser.lua  pypi.lua  requirements.lua  state.lua  types.lua  ui.lua  update.lua  user.lua
lua/py-requirements/integrations/: blink.lua  cmp.lua  lsp.lua  shared.lua  source.lua
lua/py-requirements/lib/: curl.lua  pack.lua  package.lua  pypi.lua  specifier.lua  ts.lua  ui.lua  util.lua  version.lua
lua/py-requirements/parser/: requirements.lua  toml.lua  ts.lua
scripts/: demo-pyproject.toml  demo-requirements.txt  record_demo.py
tests/: api_spec.lua  curl_spec.lua  init_spec.lua  minimal.lua  minimal_init.lua  parser_spec.lua  pypi_spec.lua  requirements.txt  requirements_spec.lua  specifier_spec.lua  test_util.lua  util.lua
