[project]
dependencies = [
  "click==8.1.7",
  "kaleido==0.2.0",
  "matplotlib==3.9.0",
  "pandas==2.2.2",
]

[project.optional-dependencies]
all = ["plotly==5.22.0"]
test = ["tabulate==0.9.0"]

[tool.poetry.dependencies]
termcolor = "==2.4.0"
toml = { version = "==0.10.2" }

[tool.poetry.group.dev.dependencies]
pytest = "==8.0.0"
